--- a/TRANSFORMDyad/Project.toml
+++ b/TRANSFORMDyad/Project.toml
@@ -5,16 +5,18 @@ version = "0.1.0"
 
 [deps]
 DyadEcosystemDependencies = "7bc808db-8006-421e-b546-062440d520b7"
-Markdown = "d6f4376e-aef5-505a-96c1-9c027394607a"
 DyadInterface = "99806f68-afab-45ca-9d8c-ceff6bc61f54"
+Markdown = "d6f4376e-aef5-505a-96c1-9c027394607a"
 ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
 OrdinaryDiffEqDefault = "50262376-6c5a-4cf5-baba-aaf4f84d72d7"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 PrecompileTools = "aea7be01-6a6a-4083-8856-8a6e6704d82a"
 RuntimeGeneratedFunctions = "7e49a35a-f44a-4d26-94aa-eba1b4ca6b47"
 
 [compat]
 DyadEcosystemDependencies = "=0.9.4"
 Markdown = "1"
+Plots = "1.40.17"
 
 [extras]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
@@ -23,4 +25,4 @@ Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["CSV","DataFrames","Plots","Test"]
+test = ["CSV", "DataFrames", "Plots", "Test"]
