next attempt at using Dyad

--- a/TRANSFORM/Project.toml
+++ b/TRANSFORM/Project.toml
@@ -1,5 +1,5 @@
-name = "TRANSFORMDyad"
-uuid = "1e5ff998-374f-4037-bdab-a622c92b7cef"
+name = "TRANSFORM"
+uuid = "67aee2d7-bc19-48a6-8310-27e89fbba65b"
 authors = [" <>"]
 version = "0.1.0"
 
